# pays

./: .env  .env.example  CLAUDE.md
backend/: .env  .env.example  Dockerfile  check_cv_transactions.py  check_cv_transactions_sql.py  check_local_db.py  check_prod_transactions.py  check_promo.py  check_user_subscription.py  create_trial_tariff.py  deploy_trial.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  export_trial_data.py  pyproject.toml  requirements.txt  setup_trial_prod.sql
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_bonus_tokens_discount_type.py  004_add_users_last_balance_notification.py  005_add_subscription_fields.py  006_add_subscription_transaction_type.py  007_add_tariff_period_fields.py  008_add_apply_feedbacks_table.py  008_add_transaction_idempotency_key.py  4b6c75173e6f_add_promo_activations_table.py  542d7e567590_support_fractional_tokens_and_negative_.py
backend/scripts/: check_db.py  create_db.py  expire_invoices.py  manage_promos.py  run_migrations.py  seed_tariffs.py
backend/src/: api_main.py  main.py
backend/src/api/: __init__.py
backend/src/api/dependencies/: __init__.py  auth.py
backend/src/api/middleware/: __init__.py  rate_limit.py
backend/src/api/routes/: __init__.py  health.py  legal.py  tokens.py  webhook.py
backend/src/api/schemas/: __init__.py  tokens.py
backend/src/bot/: __init__.py
backend/src/bot/callbacks/: __init__.py  feedback.py  invoice.py  pagination.py  promo.py  tariff.py
backend/src/bot/handlers/: __init__.py  apply.py  balance.py  buy.py  constructor.py  cv.py  healthcheck.py  help.py  history.py  profile.py  promo.py  skills.py  start.py  subscription.py  tariffs.py  trial.py
backend/src/bot/keyboards/: __init__.py  balance.py  feedback.py  main_menu.py  payment.py  promo.py  tariffs.py
backend/src/bot/middlewares/: __init__.py  auth.py  cancel_runner.py  command_reset.py  db_session.py
backend/src/bot/states/: __init__.py  apply.py  constructor.py  cv.py  payment.py  promo.py  skills.py  trial.py
backend/src/core/: config.py  exceptions.py  logging.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  apply_feedback.py  audit_log.py  invoice.py  promo_activation.py  promo_code.py  tariff.py  transaction.py  user.py
backend/src/db/repositories/: __init__.py  invoice_repository.py  promo_activation_repository.py  promo_code_repository.py  tariff_repository.py  (+2 more)
backend/src/payments/: __init__.py  schemas.py
backend/src/services/: __init__.py  apply_service.py  audit_service.py  billing_service.py  cv_service.py  invoice_service.py  notification_service.py  payment_service.py  promo_service.py  skills_service.py  subscription_service.py  tariff_service.py  token_service.py  transaction_service.py  trial_service.py  user_service.py
backend/src/tasks/: __init__.py  subscription_tasks.py
docs/: bot.md  (+9 more)
robotest/: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
robotest/docs/: authorization.md  setup.md  troubleshooting.md  writing-scenarios.md
robotest/scenarios/: conftest.py  test_start.py
robotest/src/: __init__.py  auth.py  client.py  config.py
(+184 files in other folders)
